<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logbtn">Login</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
    <string name="deletetx">Delete</string>
    <string name="addtx">Add</string>
    <string name="modifytx">Modify</string>
    <string name="m">m</string>
    <string name="sign_in">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signbtn">Sign Up</string>
    <string name="create_user_profile">Need an account?\nNo Problem</string>
    <string name="bt">Sign Up</string>
    <string name="addbtn2">Add</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">name</string>
    <string name="add_contact">Add Contact</string>
    <string name="modify_contact">Modify Contact</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="new_name">New Name</string>
    <string name="modify">Modify</string>
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="splash_text">App Made with ♥\n By Nour And Omar</string>
    <string name="call">Call</string>
</resources>