<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_for_login"
    tools:context=".LoginScreenApp">

    <TextView
        android:id="@+id/logTitle"
        android:layout_width="187dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:paddingLeft="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logTitle" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />


    <ImageView
        android:id="@+id/show_pass_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="7dp"
        android:alpha=".5"
        android:onClick="ShowHidePass"
        android:padding="5dp"
        android:src="@drawable/ic_visibility_off"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEdit"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdit"
        app:layout_constraintTop_toTopOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="149dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="192dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/purple_700"
        android:text="@string/logbtn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="onLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/create_user_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/signbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="40dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:text="@string/bt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>