<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_for_show"
    tools:context=".ModifyActivity">

    <TextView
        android:id="@+id/modifyTitle"
        android:layout_width="286dp"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/modify_contact"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/edit2"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:paddingLeft="15dp"
        android:ems="10"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTitle" />

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit2"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="20dp"
        android:paddingLeft="15dp"
        android:ems="10"
        android:hint="@string/new_phone_number"
        android:inputType="phone"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <Button
        android:id="@+id/ModifyButton"
        android:layout_width="149dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="192dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/purple_700"
        android:text="@string/modify"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/purple_700"
        android:drawableRight="@drawable/ic_baseline_arrow_back_24"
        android:paddingEnd="20dp"
        android:text="a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>