<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_for_login"
    tools:context=".SignIn">


    <TextView
        android:id="@+id/signTitle"
        android:layout_width="187dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/usernameedit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signTitle" />

    <EditText
        android:id="@+id/passwordedit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameedit" />

    <ImageView
        android:id="@+id/show_pass_btnn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="7dp"
        android:alpha=".5"
        android:onClick="ShowHidePass"
        android:padding="5dp"
        android:src="@drawable/ic_visibility_off"
        app:layout_constraintBottom_toBottomOf="@+id/passwordedit"
        app:layout_constraintEnd_toEndOf="@+id/passwordedit"
        app:layout_constraintTop_toTopOf="@+id/passwordedit"
        app:layout_constraintVertical_bias="0.777" />

    <EditText
        android:id="@+id/confirmedit"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordedit" />
    <Button
        android:id="@+id/signButton"
        android:layout_width="149dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="148dp"
        android:backgroundTint="@color/purple_700"
        android:background="@drawable/signinlayout"
        android:text="@string/signbtn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/purple_700"
        android:drawableRight="@drawable/ic_baseline_arrow_back_24"
        android:paddingEnd="20dp"
        android:text="a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />


</androidx.constraintlayout.widget.ConstraintLayout>